# simcoon

./: .gitignore  CMakeLists.txt  build.ps1  build.sh  environment.yml  environment_arm64.yml  environment_win.yml
.github/workflows/: build.yml  ci.yml
cmake/: FindDependencies.cmake
python/: CMakeLists.txt
python/include/simcoon/python_wrappers/Libraries/Continuum_mechanics/: contimech.hpp  hyperelastic.hpp  recovery_props.hpp  stress.hpp  transfer.hpp
python/include/simcoon/python_wrappers/Libraries/Identification/: optimize.hpp
python/include/simcoon/python_wrappers/Libraries/Maths/: lagrange.hpp  rotation.hpp
python/src/python_wrappers/Libraries/Continuum_mechanics/: contimech.cpp  damage.cpp  hyperelastic.cpp  recovery_props.cpp  stress.cpp  transfer.cpp
python/src/python_wrappers/Libraries/Identification/: constants.cpp  optimize.cpp  parameters.cpp
python/src/python_wrappers/Libraries/Maths/: lagrange.cpp
python/test/Carma/: Tarr_to_mat.hpp  Troundtrip.cpp
python/test/parameter_test/data/: parameters.inp
python/test/simmit_test/data/: path.txt
software/: CMakeLists.txt
src/python/: setup.py
src/python/simcoon/: __init__.py  clean_data.py
tests/: CMakeLists.txt
